# Project001

./: .gitignore  .gitmodules  CMakeLists.txt  IncludeGraph.psd  Setup.bat
Framework/: CMakeLists.txt
Framework/Source/: Application.cpp  Application.h  AutoIdMap.h  CollisionBodyQuadTree2D.cpp  CollisionBodyQuadTree2D.h  CollisionSystem2D.cpp  CollisionSystem2D.h  ComponentContainer.cpp  ComponentContainer.h  ComponentStores.cpp  ComponentStores.h  Event.h  FontData.h  FontLoader.cpp  FontLoader.h  FontMeshData.h  IniReaderWriter.cpp  IniReaderWriter.h  Logger.h  MeshLoader.cpp  MeshLoader.h  RenderData.h  RenderSystem.cpp  RenderSystem.h  Renderer.cpp  Renderer.h  ResourceStores.h  Scene.cpp  Scene.h  SoundData.h  SoundLoader.cpp  SoundPlayer.h  TextureData.h  TextureLoader.cpp  TextureLoader.h  UniqueBiMap.h  UniqueIdGenerator.cpp  UniqueIdGenerator.h  Window.cpp  Window.h
Framework/Source/Components/: Camera.cpp  Camera.h  CollisionBody2D.cpp  CollisionBody2D.h  CollisionShape2D.h  LightSource.h  Placement.h  Placement2D.h  Position.h  Position2D.h  RenderedMesh.h  RenderedModel.cpp  RenderedModel.h
Framework/Source/Math/: MathUtilities.cpp  MathUtilities.h  MathUtilities.inl  Overlap2D.cpp  Overlap2D.h  Overlap2D.inl  Overlap3D.cpp  Overlap3D.h  Overlap3D.inl  Overlap3D_UnitTests.cpp  Overlap3D_UnitTests.h  Overlap3D_UnitTests.inl
Framework/Source/Platform/: GLFW_Window.cpp  GLFW_Window.h  MiniAudio_SoundPlayer.cpp  MiniAudio_SoundPlayer.h  OpenGL_Mesh.cpp  OpenGL_Mesh.h  OpenGL_Renderer.cpp  OpenGL_Renderer.h  OpenGL_Shader.cpp  OpenGL_Texture.cpp  Vulkan_Renderer.cpp  Vulkan_Renderer.h
Framework/Source/Platform/OpenGL_Shaders/: o_grid.frag  o_grid.vert  o_normal.frag  o_normal.geom  o_normal.vert  o_primary.frag  o_primary.vert  o_screen.frag  o_screen.vert  o_wireframe.frag  o_wireframe.geom  o_wireframe.vert
Framework/Source/Platform/Vulkan_Shaders/: v_primary.frag  v_primary.vert  v_screen.frag  v_screen.vert
Framework/Source/Resources/: PixelFont5x6.cpp  PixelFont5x6.h
Framework/Source/Utilities/: FontUtility.cpp  FontUtility.h  IniReaderWriter.cpp  IniReaderWriter.h  MathUtility.cpp  MathUtility.h  MeshUtility.cpp  MeshUtility.h  Overlap2D.cpp  Overlap2D.h  Overlap3D.cpp  Overlap3D.h  Overlap3D_UnitTests.cpp  Overlap3D_UnitTests.h  SortUtility.h  SoundUtility.cpp  SoundUtility.h  StringUtility.cpp  StringUtility.h  TextureUtility.cpp  TextureUtility.h
Game001/: CMakeLists.txt
Game001/Binary/: TrickOrTreatOnSpookyStreet.ini
Game001/Source/: Main.cpp  Scene001.cpp  Scene001.h  Scene002.cpp  Scene002.h  SharedApplicationData.h
Game001/Source/Resources/: dropCoin_wav.h  gridDark_64x64_png.h  gridLit_64x64_png.h  hitHurt_wav.h  houseDark_384x256_png.h  houseDark_384x272_png.h  houseLit_384x256_png.h  houseLit_384x272_png.h  lampDark_32x160_png.h  lampLit_32x160_png.h  monsterLit_32x56_png.h  personLit_32x56_png.h  pickupCoin_wav.h  unknownDark_32x56_png.h
Game002/: CMakeLists.txt
Include/: stb_image.h
Lib/: Note.txt  glfw3.lib
Models/: Cube.blend  Cube.blend1  Cube.mtl  CubeQ.blend  CubeQ.mtl
Scripts/: Build_Vendors.bat  Generate_OpenGL_Renderer_Shader_Headers.bat  Generate_Vulkan_Renderer_Shader_Headers.bat  compile_shaders_in_dir_to_spv.bat  convert_file_to_header.bat  convert_spv_shaders_in_dir_to_headers.bat  convert_txt_shaders_in_dir_to_headers.bat
Shaders/: batchShader.frag  batchShader.vert  convert_all_shaders_to_headers.bat  primaryShader.frag  shader_compiler_caller.bat  shader_compiler_caller.sh
Source/: Application.cpp  Application.h  AutoIdMap.h  CollisionBodyQuadTree2D.cpp  CollisionBodyQuadTree2D.h  CollisionSystem2D.cpp  CollisionSystem2D.h  ComponentContainer.cpp  ComponentContainer.h  ComponentStores.cpp  ComponentStores.h  Event.h  FontData.h  FontLoader.cpp  FontLoader.h  FontMeshData.h  FreetypeTextLoader.cpp  FreetypeTextLoader.h  Logger.cpp  Logger.h  MeshData.h  MeshLoader.cpp  MeshLoader.h  MeshVertex.h  RenderData.h  RenderSystem.cpp  RenderSystem.h  Renderer.cpp  Renderer.h  ResourceStores.cpp  (+16 more)
TestApplication/: CMakeLists.txt
TestApplication/Fonts/: Antonio-Regular.ssf
TestApplication/Models/: Ship.blend  Tank.blend
TestApplication/Scrap/: Logger_Old.cpp  Logger_Old.h  OpenGL_RendererAlt.cpp  TestScene004_libigl.cpp  TestScene004_libigl.h  Vertices.h  Vulkan_Renderer_T02.cpp
TestApplication/Scrap/CollisionPrototyping/: CollisionPrototyping_Scrap_Notes.txt  CollisionSystem2D.h  Overlap2D_Scrap_01.inl  Overlap2D_Scrap_02.h  Overlap2D_Scrap_02.inl  Overlap2D_Scrap_03.h  Overlap2D_Scrap_03.inl
TestApplication/Scrap/CollisionPrototyping/Components/: CollisionBody.h
TestApplication/Scrap/ECSPrototyping/: ComponentContainer_01.h  ComponentContainer_02.h  ComponentStores_02.h  EntityComponentSystem.cpp  EntityComponentSystem.h  System.h
TestApplication/Scrap/FreetypeTextLoader/: FreetypeTextLoader.cpp  FreetypeTextLoader.h  TestResource_AntonioRegular_ttf.h
TestApplication/Scrap/OOPComponents/: Camera.cpp  Model.cpp  Position.h  RenderedModel.cpp  SoundSource.h
TestApplication/Scrap/Stores/: SoundStores.cpp  TextureStores.h
TestApplication/Source/: Main.cpp  TestAnimatedSpriteScene001.cpp  TestAnimatedSpriteScene001.h  TestApplicationData.h  TestButtonData001.h  TestComponents.cpp  TestComponents.h  TestInstructionScene001.cpp  TestInstructionScene001.h  TestResource_AntonioRegular_png.h  TestResource_AntonioRegular_ssf.h  TestResource_Bounce_wav.h  TestResource_CounterclockwiseDie_png.h  TestScene001.cpp  TestScene001.h  TestScene002.cpp  TestScene002.h  TestScene003.cpp  TestScene003.h  TestScene004.cpp  TestScene004.h  TestScene005.cpp  TestScene005.h  TestScene006.cpp  TestScene006.h  TestScene007.cpp  TestScene007.h  TestScene008.cpp  TestScene008.h  TestScene009.cpp  TestScene009.h  TestScene010.cpp  TestScene010.h  TestScene011.cpp  TestScene011.h  TestScene012.cpp  TestScene012.h  TestScene013.cpp  TestScene013.h  TestScene015.cpp  (+56 more)
TestApplication/Textures/: alphaGradient256.pdn  handCursor_01.psd  house_384x256.psd  house_384x272.psd  lamp_32x160.psd  people_32x56.psd  pixel_font_5x6.psd
(+449 files in other folders)
